crates/reinhardt-db-macros/tests/ui/fail/missing_collection.rs
//! Document without collection attribute should fail

use reinhardt_db_macros::document;

#[document(backend = "mongodb")]
struct User {
	id: String,
}

fn main() {}
