crates/reinhardt-db-macros/tests/ui/fail/missing_collection.stderr
error: missing required attribute `collection`
 --> tests/ui/fail/missing_collection.rs:5:1
  |
5 | #[document(backend = "mongodb")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `document` (in Nightly builds, run with -Z macro-backtrace for more info)
